# liquido

simulation/: CMakeLists.txt  ofos.cc
simulation/include/: OFOS_ActionInitialization.h  OFOS_DetectorConstruction.h  OFOS_DetectorMessenger.h  OFOS_EventAction.h  OFOS_LsMatProperties.h  OFOS_OPHit.h  OFOS_OpticalPhotonSD.h  OFOS_OutputLog.h  OFOS_OutputNtuples.h  OFOS_PhysicsList.h  OFOS_PrimaryGeneratorAction.h  OFOS_ReadoutUnitGeometry.h  OFOS_RunAction.h  OFOS_SteppingAction.h  OFOS_TrackInformation.h  OFOS_TrackingAction.h  OFOS_Verbosity.h
simulation/src/: OFOS_ActionInitialization.cc  OFOS_DetectorConstruction.cc  OFOS_DetectorMessenger.cc  OFOS_EventAction.cc  OFOS_LsMatProperties.cc  OFOS_OPHit.cc  OFOS_OpticalPhotonSD.cc  OFOS_OutputLog.cc  OFOS_OutputNtuples.cc  OFOS_PhysicsList.cc  OFOS_PrimaryGeneratorAction.cc  OFOS_RunAction.cc  OFOS_SteppingAction.cc  OFOS_TrackInformation.cc  OFOS_TrackingAction.cc
simulation/utils/: clearData.sh  shoot_positron.mac  vis.mac
